# Configuration for from
AC_INIT(from, 1.99.0)
AC_CONFIG_SRCDIR(from.c)
AM_INIT_AUTOMAKE(from, 1.99.0)
dnl AM_INIT_AUTOMAKE

# Versions of autoconf before 2.12 had bugs in autoheader that screwed up
# the production of headers/config.h.in.
AC_PREREQ(2.12)

# Generate <config.h>; note that we use a `header' subdirectory, which
# contains all include files distributed with inetutils, and an `include'
# directory, which holds those actually needed for compilation.
#
# If config.h.in needs to be regenerated (because of changes in configure.in
# or headers/acconfig.h, use the command `autoheader -l headers'.
#
AM_CONFIG_HEADER(config.h)

# config.h turns this on, so make sure it's on for our tests too
#CPPFLAGS=-D_BSD_SOURCE
CPPFLAGS="-D_BSD_SOURCE -Wall"

# The list of subdirs that may be built, split into subsets (which the user
# may select for compilation at config or make time); the composite list of
# everything to build by default is defined at the end of this file.
# (These don't contain talk or talkd, which is added later if necessary)

# Optional things we put into libinetutils (we use the name `LIBOBJS' because
# that's what AC_REPLACE_FUNCS uses).

# By default we compile without debug mode.
AC_ARG_ENABLE(debug,
  [  --enable-debug          do with debug])

# By default "mailp" mode and "prmail" mode are enabled.
AC_ARG_ENABLE(mailp,
  [AC_HELP_STRING([--enable-mailp], [build "mailp" - mail checker])])
AC_ARG_ENABLE(prmail,
  [AC_HELP_STRING([--enable-prmail], [build "prmail" - trivial mail reader])])
AC_ARG_ENABLE(ssl,
  [AC_HELP_STRING([--enable-ssl], [enable SSL support (require OpenSSL)])])

# By default we use no default server.
AC_ARG_WITH(openssl, 
  [AC_HELP_STRING(--with-openssl, [use OpenSSL library])])

dnl AC_PROG_MAKE_SET

AC_PROG_CC
AC_PROG_GCC_TRADITIONAL
AC_C_CONST
AC_PROG_INSTALL
dnl AC_PROG_YACC
dnl AC_CHECK_TOOL(AR, ar)
dnl AC_CHECK_TOOL(RANLIB, ranlib, :)
AC_PATH_PROG(RM, rm, rm)
AC_PATH_PROG(MV, mv, mv)
AC_PATH_PROG(LN, ln, ln)

AC_HEADER_STDC
AC_HEADER_TIME
AC_HEADER_TIOCGWINSZ

AC_CHECK_HEADERS(sys/time.h sys/socket.h arpa/inet.h paths.h)
AC_CHECK_FUNCS(strchr memcpy)

AC_CHECK_FUNC(inet_ntoa, ,
  AC_CHECK_LIB(nsl, inet_ntoa, ,
    AC_MSG_ERROR([Your system is not support inet_ntoa().])))

AC_CHECK_FUNC(socket, ,
  AC_CHECK_LIB(socket, socket, ,
    AC_MSG_ERROR([Your system is not support socket().])))

if test -n "${with_openssl+set}" -o -n "${enable_ssl+set}"; then
  AC_CHECK_LIB(ssl, BIO_new,
    [AC_DEFINE(WITH_OPENSSL, 1, [use OpenSSL library]) LIBS="-lssl $LIBS"
     if test -n "${enable_ssl+set}"; then
       AC_DEFINE(ENABLE_SSL, 1, [enable SSL support])
     fi], AC_MSG_ERROR([OpenSSL library is missing]))
fi

AC_TYPE_SIZE_T

# Functions that we will define (in libinetutils) if necessary.
AC_REPLACE_FUNCS(strncasecmp)


# Use or not use mailp program
AC_MSG_CHECKING([whether you need mailp extension])
case "${enable_mailp}" in
  yes|'') mailp_progname=mailp ;;
  */*) AC_MSG_ERROR([Don't use / in program name.]) ;;
  no) unset mailp_progname ;;
  *) mailp_progname="$enable_mailp" ;;
esac
if test -n "${mailp_progname}"; then
  AC_DEFINE_UNQUOTED(PROG_MAILP, "${mailp_progname}", [program name for mail check])
  AC_MSG_RESULT(as "${mailp_progname}")
else
  AC_MSG_RESULT(no)
fi

# Use or not use prmail program
AC_MSG_CHECKING([whether you need prmail extension])
case "${enable_prmail}" in
  yes|'') prmail_progname=prmail ;;
  */*) AC_MSG_ERROR([Don't use / in program name.]) ;;
  no) unset prmail_progname ;;
  *) prmail_progname="$enable_prmail" ;;
esac
if test -n "${prmail_progname}"; then
  AC_DEFINE_UNQUOTED(PROG_PRMAIL, "${prmail_progname}", [program name for mail check])
  AC_MSG_RESULT(as "${prmail_progname}")
else
  AC_MSG_RESULT(no)
fi

# Define default pop server name
AC_MSG_CHECKING([default POP server's name])
case "${enable_default_pop_server}" in
  yes) AC_MSG_ERROR([You must give default POP server's name.]) ;;
  no|'') unset defaultpopserver ;;
  *) defaultpopserver="$enable_default_pop_server" ;;
esac
if test -n "${defaultpopserver}"; then
  AC_DEFINE_UNQUOTED(DEFAULT_POP_HOST, "${defaultpopserver}", [default mail server name])
  AC_MSG_RESULT("${defaultpopserver}")
else
  AC_MSG_RESULT([not given])
  AC_MSG_WARN([You must give server's name on each execution, OK?])
fi

TARGET_ALIASES="${mailp_progname} ${prmail_progname}"
AC_SUBST(TARGET_ALIASES)

if test "${enable_debug}" = "yes"; then
  AC_DEFINE(DEBUG, 1, [debug mode flag])

fi

AC_OUTPUT(Makefile)
